# megamoorecm

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  main.py  requirements_lock.txt
game/: 8bitmegaman.json  BUILD  engine.py  level.py  level1.tmx  main.py  mapset.py  player.py  smb.tsx
wrappers/: black-wrapper.py  tiled.sh
